# ContentCreationCrew

./: .gitignore  README.md  pyproject.toml
src/educational_content_creation/: crew.py  main.py
src/educational_content_creation/config/: agents.yaml  tasks.yaml
